# cjm-text-plugin-nltk

./: README.md  environment.yml  index.html  meta.html  meta.html.md  plugin.html  plugin.html.md  pyproject.toml  robots.txt  search.json  settings.ini  sitemap.xml
cjm_text_plugin_nltk/: _modidx.py  meta.py  plugin.py
nbs/: index.ipynb  meta.ipynb  nbdev.yml  plugin.ipynb
tests_manual/: test_nltk_plugin.py
